# dastrap

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  Cargo.toml  README.md  build.rs
.github/workflows/: build.yml  linux.yml
examples/: compile.rs  example.das  examplib.das
src/: lib.rs
src/bindings/: c.rs  das.rs  mod.rs
src/bindings/c/: c.rs  mod.rs
src/interop/: c.rs  mod.rs
src/interop/extended/: ext.cpp  ext.h  mod.rs
